[codex] Fix snapshot publishing and document usage (#3)
* Harden snapshot publish signing configuration

* Avoid empty signing key id in snapshot publish

* Use armored GPG signing secret for snapshots

* Use short GPG key id for snapshot signing

* Use Central namespace for Maven coordinates

* Document snapshot consumption

* Expand README usage example

* Skip CI for documentation-only changes

* Document WinUI application setup